--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Cinzel:wght@500&family=Orbitron&family=Titillium+Web:wght@700&display=swap');
+
+
 .App {
   width: 100%;
   height: auto;
