--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ code {
 } */
 
 /* google font */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Cinzel:wght@500&family=Orbitron&family=Titillium+Web:wght@700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap'); */
 
 /* layout */
 :root {
